--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </style>
 
 <body class="w3-theme-l5">
-
   <!-- Navbar -->
   <div class="w3-top">
     <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
@@ -29,39 +28,49 @@
         <i class="fa fa-bars"></i>
       </a>
       <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4">
-        <i class="fa fa-home w3-margin-right"></i>Logo</a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="News">
-        <i class="fa fa-globe"></i>
+        <i class="fa fa-linkedin-square w3-margin-right"></i>
+        LinkedIn Clone
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Account Settings">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+        <i class="fa fa-gear"></i>
+        Settings
+      </a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
         <i class="fa fa-user"></i>
+        My Profile
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+        <i class="fa fa-exclamation-triangle"></i>
+        Notifications
+      </a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
         <i class="fa fa-envelope"></i>
+        Messages
       </a>
-      <div class="w3-dropdown-hover w3-hide-small">
-        <button class="w3-button w3-padding-large" title="Notifications">
-          <i class="fa fa-bell"></i>
-          <span class="w3-badge w3-right w3-small w3-green">3</span>
-        </button>
-        <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
-          <a href="#" class="w3-bar-item w3-button">One new friend request</a>
-          <a href="#" class="w3-bar-item w3-button">John Doe posted on your wall</a>
-          <a href="#" class="w3-bar-item w3-button">Jane likes your post</a>
-        </div>
-      </div>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
-        <img src="images/avatar2.png" class="w3-circle" style="height:23px;width:23px" alt="Avatar">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+        <i class="fa fa-list"></i>
+        Jobs
+      </a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+        <i class="fa fa-globe"></i>
+        Network
+      </a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+        <i class="fa fa-home"></i>
+        Home
       </a>
     </div>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Network</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Jobs</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Messages</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Notifications</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Settings</a>
   </div>
 
   <!-- Page Container -->
@@ -108,13 +117,10 @@
           </div>
         </div>
         <br>
-
         <!-- End Left Column -->
       </div>
-
       <!-- Middle Column -->
       <div class="w3-col m7">
-
         <div class="w3-row-padding">
           <div class="w3-col m12">
             <div class="w3-card w3-round w3-white">
@@ -188,55 +194,17 @@
           <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
             <i class="fa fa-comment"></i> Comment</button>
         </div>
-
         <!-- End Middle Column -->
       </div>
 
-      <!-- Right Column -->
-      <div class="w3-col m2">
-
-        <div class="w3-card w3-round w3-white w3-center">
-          <div class="w3-container">
-            <p>Friend Request</p>
-            <img src="images/avatar6.png" alt="Avatar" style="width:50%">
-            <br>
-            <span>Jane Doe</span>
-            <div class="w3-row w3-opacity">
-              <div class="w3-half">
-                <button class="w3-button w3-block w3-green w3-section" title="Accept">
-                  <i class="fa fa-check"></i>
-                </button>
-              </div>
-              <div class="w3-half">
-                <button class="w3-button w3-block w3-red w3-section" title="Decline">
-                  <i class="fa fa-remove"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-
-        <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
-          <p>ADS</p>
-        </div>
-        <br>
-
-        <!-- End Right Column -->
-      </div>
-
-      <!-- End Grid -->
     </div>
-
-    <!-- End Page Container -->
+    <!-- End Grid -->
+  </div>
+  <!-- End Page Container -->
   </div>
   <br>
 
   <!-- Footer -->
-  <footer class="w3-container w3-theme-d3 w3-padding-16">
-    <h5>Footer</h5>
-  </footer>
-
   <footer class="w3-container w3-theme-d5">
     <p>Powered by
       <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
@@ -254,7 +222,6 @@
       }
     }
   </script>
-
 </body>
 
 </html>
