--- a/index.html
+++ b/index.html
@@ -22,40 +22,44 @@
 <body class="w3-theme-l5">
   <!-- Navbar -->
   <div class="w3-top">
-    <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2"
-        href="javascript:void(0);" onclick="openNav()">
+    <div class="w3-bar w3-theme-d3 w3-left-align w3-large">
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-large" href="javascript:void(0);"
+        onclick="openNav()">
         <i class="fa fa-bars"></i>
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4">
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">
         <i class="fa fa-linkedin-square w3-margin-right"></i>
         LinkedIn Clone
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
+        <i class="fa fa-sign-out"></i>
+        Log Out
+      </a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
         <i class="fa fa-gear"></i>
         Settings
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
         <i class="fa fa-user"></i>
         My Profile
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
-        <i class="fa fa-exclamation-triangle"></i>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
+        <i class="fa fa-bell"></i>
         Notifications
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
         <i class="fa fa-envelope"></i>
         Messages
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
         <i class="fa fa-list"></i>
         Jobs
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
         <i class="fa fa-globe"></i>
         Network
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
         <i class="fa fa-home"></i>
         Home
       </a>
@@ -127,7 +131,7 @@
               <div class="w3-container w3-padding">
                 <h6 class="w3-opacity">Social Media template by w3.css</h6>
                 <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
-                <button type="button" class="w3-button w3-theme">
+                <button type="button" class="w3-button w3-theme-d2">
                   <i class="fa fa-pencil"></i> Post</button>
               </div>
             </div>
@@ -153,7 +157,7 @@
               <img src="images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
             </div>
           </div>
-          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom">
+          <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
             <i class="fa fa-thumbs-up"></i> Like</button>
           <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
             <i class="fa fa-comment"></i> Comment</button>
@@ -170,7 +174,7 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat.
           </p>
-          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom">
+          <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
             <i class="fa fa-thumbs-up"></i> Like</button>
           <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
             <i class="fa fa-comment"></i> Comment</button>
@@ -189,7 +193,7 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat.
           </p>
-          <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom">
+          <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
             <i class="fa fa-thumbs-up"></i> Like</button>
           <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
             <i class="fa fa-comment"></i> Comment</button>
