--- a/jobs.html
+++ b/jobs.html
@@ -88,10 +88,13 @@
                     <div class="w3-col m12">
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding">
-                                <h6 class="w3-opacity">Social Media template by w3.css</h6>
-                                <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
-                                <button type="button" class="w3-button w3-theme-d2">
-                                    <i class="fa fa-pencil"></i> Post</button>
+                                <div class="w3-padding-8">
+                                    <input type="text" placeholder="Post your own Job Offer" class="w3-border w3-padding" style="width:100%;" />
+                                </div>
+                                <div class="w3-padding-8">
+                                    <button type="button" class="w3-button w3-theme-d2">
+                                        <i class="fa fa-pencil"></i> Post</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -99,10 +102,9 @@
 
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
-                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">1 min</span>
-                    <h4>John Doe</h4>
-                    <br>
+                    <h4>Title</h4>
+                    <p>Submitted by Profile #1 </p>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -117,45 +119,36 @@
                         </div>
                     </div>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                        <i class="fa fa-send"></i> Apply</button>
                 </div>
 
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
-                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">16 min</span>
-                    <h4>Jane Doe</h4>
-                    <br>
+                    <h4>Title</h4>
+                    <p>Submitted by Profile #2 </p>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat.
                     </p>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                        <i class="fa fa-send"></i> Apply</button>
                 </div>
 
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
-                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">32 min</span>
-                    <h4>Angie Jane</h4>
-                    <br>
+                    <h4>Title</h4>
+                    <p>Submitted by Profile #3 </p>
                     <hr class="w3-clear">
-                    <p>Have you seen this?</p>
-                    <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat.
                     </p>
+                    <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                        <i class="fa fa-send"></i> Apply</button>
                 </div>
                 <!-- End Middle Column -->
             </div>
