Updated html, removed unused elements, added checks for empty fields and passwords.

--- a/jobs.html
+++ b/jobs.html
@@ -31,7 +31,7 @@
                 <i class="fa fa-linkedin-square w3-margin-right"></i>
                 LinkedIn Clone
             </a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
+            <a href="login.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
                 <i class="fa fa-sign-out"></i>
                 Log Out
             </a>
@@ -102,7 +102,6 @@
 
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
-                    <span class="w3-right w3-opacity">1 min</span>
                     <h4>Title</h4>
                     <p>Submitted by Profile #1 </p>
                     <hr class="w3-clear">
@@ -124,7 +123,6 @@
 
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
-                    <span class="w3-right w3-opacity">16 min</span>
                     <h4>Title</h4>
                     <p>Submitted by Profile #2 </p>
                     <hr class="w3-clear">
@@ -138,7 +136,6 @@
 
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
-                    <span class="w3-right w3-opacity">32 min</span>
                     <h4>Title</h4>
                     <p>Submitted by Profile #3 </p>
                     <hr class="w3-clear">
