--- a/messages.html
+++ b/messages.html
@@ -83,85 +83,120 @@
         <div class="w3-row">
 
             <!-- Middle Column -->
-            <div class="w3-col">
-                <div class="w3-row-padding">
-                    <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
-                            <div class="w3-container w3-padding">
-                                <h6 class="w3-opacity">Social Media template by w3.css</h6>
-                                <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
-                                <button type="button" class="w3-button w3-theme-d2">
-                                    <i class="fa fa-pencil"></i> Post</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+            <div class="w3-col m2">
+                <div class="w3-container w3-card w3-white w3-round w3-margin" style="max-height: 720px; overflow-y: scroll">
                     <br>
-                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">1 min</span>
-                    <h4>John Doe</h4>
-                    <br>
-                    <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
-                    </p>
-                    <div class="w3-row-padding" style="margin:0 -16px">
-                        <div class="w3-half">
-                            <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
-                        </div>
-                        <div class="w3-half">
-                            <img src="images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
-                        </div>
-                    </div>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
-                </div>
-
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
-                    <br>
-                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">16 min</span>
-                    <h4>Jane Doe</h4>
-                    <br>
-                    <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
-                    </p>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
-                </div>
-
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
-                    <br>
-                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">32 min</span>
-                    <h4>Angie Jane</h4>
-                    <br>
-                    <hr class="w3-clear">
-                    <p>Have you seen this?</p>
-                    <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
-                    </p>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                    <img src="images/avatar2.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <h6>Profile #1</h6>
+                    <hr>
+                    <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <h6>Profile #2</h6>
+                    <hr>
+                    <img src="images/avatar5.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <h6>Profile #3</h6>
+                    <hr>
+                    <img src="images/avatar6.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <h6>Profile #4</h6>
                 </div>
                 <!-- End Middle Column -->
             </div>
 
+            <div class="w3-col m10">
+                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                    <div style="height: 720px; overflow-y: scroll">
+                        <br>
+                        <ul class="w3-ul">
+                            <li>
+                                <table style="width: 100%">
+                                    <td style="vertical-align: top">
+                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle">
+                                    </td>
+                                    <td style="width: 90%">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br>
+                                    </td>
+                                </table>
+                            </li>
+                            <li>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                <br>
+                                <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua.
+                                <br>
+                                <br>
+                            </li>
+                            <li>
+                                <table style="width: 100%">
+                                    <td style="vertical-align: top">
+                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle">
+                                    </td>
+                                    <td style="width: 90%">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua.
+                                        <br>
+                                        <br>
+                                    </td>
+                                </table>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="w3-padding-8">
+                        <table style="width:100%">
+                            <td style="width: 100%">
+                                <input type="text" placeholder="Type your message." class="w3-border w3-padding" style="width:100%;" />
+                            </td>
+                            <td style="width: 100%">
+                                <button type="button" onclick="location.href='network_search.html'" class="w3-button w3-theme-d2">
+                                    <i class="fa fa-send"></i> Send</button>
+                            </td>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <!-- End Middle Column -->
         </div>
-        <!-- End Grid -->
+
+    </div>
+    <!-- End Grid -->
     </div>
     <!-- End Page Container -->
     </div>
