--- a/network.html
+++ b/network.html
@@ -31,7 +31,7 @@
                 <i class="fa fa-linkedin-square w3-margin-right"></i>
                 LinkedIn Clone
             </a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
+            <a href="login.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
                 <i class="fa fa-sign-out"></i>
                 Log Out
             </a>
