--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>LinkedIn Clone - Profile</title>
+<title>LinkedIn Clone - Home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
@@ -31,7 +31,7 @@
                 <i class="fa fa-linkedin-square w3-margin-right"></i>
                 LinkedIn Clone
             </a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
+            <a href="login.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
                 <i class="fa fa-sign-out"></i>
                 Log Out
             </a>
@@ -83,80 +83,89 @@
         <div class="w3-row">
 
             <!-- Middle Column -->
-            <div class="w3-col">
-                <div class="w3-row-padding">
-                    <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
-                            <div class="w3-container w3-padding">
-                                <h6 class="w3-opacity">Social Media template by w3.css</h6>
-                                <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
-                                <button type="button" class="w3-button w3-theme-d2">
-                                    <i class="fa fa-pencil"></i> Post</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="w3-col m4">
 
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
-                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">1 min</span>
-                    <h4>John Doe</h4>
-                    <br>
-                    <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
-                    </p>
-                    <div class="w3-row-padding" style="margin:0 -16px">
-                        <div class="w3-half">
-                            <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
-                        </div>
-                        <div class="w3-half">
-                            <img src="images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
-                        </div>
-                    </div>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
-                </div>
-
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
-                    <br>
-                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">16 min</span>
+                    <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle w3-margin-bottom">
                     <h4>Jane Doe</h4>
-                    <br>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
+                        et dolore magna aliqua.
                     </p>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                    <hr class="w3-clear">
+                    <h4>Contact Info</h4>
+                    <p>
+                        <i class="fa fa-envelope-open"></i> Email: email@gmail.com</p>
+                    <p>
+                        <i class="fa fa-phone"></i> Phone: +123456789</p>
+                    <p>
+                        <i class="fa fa-link"></i> Website: website.com</p>
+                    </p>
                 </div>
 
+                <!-- End Middle Column -->
+            </div>
+
+            <div class="w3-col m8">
+
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
-                    <br>
-                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">32 min</span>
-                    <h4>Angie Jane</h4>
-                    <br>
+                    <h4>Work Experience</h4>
+                    <ul style="padding-left: 16px">
+                        <li>Company #1
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                            <br>
+                            <br>
+                        </li>
+                        <li>Company #2
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                            <br>
+                            <br>
+                        </li>
+                        <li>Company #3
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                            <br>
+                            <br>
+                        </li>
+                    </ul>
                     <hr class="w3-clear">
-                    <p>Have you seen this?</p>
-                    <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
+                    <h4>Education</h4>
+                    <ul style="padding-left: 16px">
+                        <li>University
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                            <br>
+                            <br>
+                        </li>
+                        <li>School
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.
+                            <br>
+                            <br>
+                        </li>
+                    </ul>
+                    <hr class="w3-clear">
+                    <h4>Skills</h4>
+                    <p>
+                        <span class="w3-tag w3-small w3-theme">News</span>
+                        <span class="w3-tag w3-small w3-theme">W3Schools</span>
+                        <span class="w3-tag w3-small w3-theme">Labels</span>
+                        <span class="w3-tag w3-small w3-theme">Games</span>
+                        <span class="w3-tag w3-small w3-theme">Friends</span>
+                        <span class="w3-tag w3-small w3-theme">Games</span>
+                        <span class="w3-tag w3-small w3-theme">Friends</span>
+                        <span class="w3-tag w3-small w3-theme">Food</span>
+                        <span class="w3-tag w3-small w3-theme">Design</span>
+                        <span class="w3-tag w3-small w3-theme">Art</span>
+                        <span class="w3-tag w3-small w3-theme">Photos</span>
                     </p>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                    <button type="button" onclick="location.href='profile_edit.html'" class="w3-button w3-theme-d2 w3-margin-bottom">
+                        <i class="fa fa-edit"></i> Edit</button>
                 </div>
+
                 <!-- End Middle Column -->
             </div>
 
