--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                 <i class="fa fa-linkedin-square w3-margin-right"></i>
                 LinkedIn Clone
             </a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
+            <a href="login.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
                 <i class="fa fa-sign-out"></i>
                 Log Out
             </a>
@@ -88,10 +88,13 @@
                     <div class="w3-col m12">
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding">
-                                <h6 class="w3-opacity">Social Media template by w3.css</h6>
-                                <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
-                                <button type="button" class="w3-button w3-theme-d2">
-                                    <i class="fa fa-pencil"></i> Post</button>
+                                <div class="w3-padding-8">
+                                    <input type="text" placeholder="Status: Feeling great!" class="w3-border w3-padding" style="width:100%;" />
+                                </div>
+                                <div class="w3-padding-8">
+                                    <button type="button" class="w3-button w3-theme-d2">
+                                        <i class="fa fa-pencil"></i> Post</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -100,7 +103,6 @@
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
                     <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">1 min</span>
                     <h4>John Doe</h4>
                     <br>
                     <hr class="w3-clear">
@@ -125,7 +127,6 @@
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
                     <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">16 min</span>
                     <h4>Jane Doe</h4>
                     <br>
                     <hr class="w3-clear">
@@ -142,7 +143,6 @@
                 <div class="w3-container w3-card w3-white w3-round w3-margin">
                     <br>
                     <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">32 min</span>
                     <h4>Angie Jane</h4>
                     <br>
                     <hr class="w3-clear">
