--- a/notifications.html
+++ b/notifications.html
@@ -31,7 +31,7 @@
                 <i class="fa fa-linkedin-square w3-margin-right"></i>
                 LinkedIn Clone
             </a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
+            <a href="login.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
                 <i class="fa fa-sign-out"></i>
                 Log Out
             </a>
@@ -83,85 +83,134 @@
         <div class="w3-row">
 
             <!-- Middle Column -->
-            <div class="w3-col">
-                <div class="w3-row-padding">
-                    <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
-                            <div class="w3-container w3-padding">
-                                <h6 class="w3-opacity">Social Media template by w3.css</h6>
-                                <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
-                                <button type="button" class="w3-button w3-theme-d2">
-                                    <i class="fa fa-pencil"></i> Post</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <table style="width: 100%">
+                <tr style="width: 100%">
+                    <td style="width: 50%;">
+                        <div class="w3-container w3-card w3-white w3-round w3-margin">
+                            <table style="width: 100%">
+                                <tr>
+                                    <h4 class="w3-center">Profile #1 wants to connect</h4>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p class="w3-center">
+                                            <img src="images/avatar2.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                        </p>
+                                    </td>
+                                    <td style="width: 100%">
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
-                    <br>
-                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">1 min</span>
-                    <h4>John Doe</h4>
-                    <br>
-                    <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
-                    </p>
-                    <div class="w3-row-padding" style="margin:0 -16px">
-                        <div class="w3-half">
-                            <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
+                                        <p class="w3-center">
+                                            <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
+                                        <p class="w3-center">
+                                            <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
+                                        <p class="w3-center">
+                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                    </td>
+                                    <td class="w3-opacity-min">
+                                        <button type="button" class="w3-button w3-green  w3-margin-bottom" style="width: 100%">
+                                            <i class="fa fa-check"></i> Accept</button>
+                                        <button type="button" class="w3-button w3-red w3-margin-bottom" style="width: 100%">
+                                            <i class="fa fa-remove"></i> Deny</button>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
-                        <div class="w3-half">
-                            <img src="images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
+                    </td>
+                    <td style="width: 50%;">
+                        <div class="w3-container w3-card w3-white w3-round w3-margin">
+                            <table style="width: 100%">
+                                <tr>
+                                    <h4 class="w3-center">Profile #2 wants to connect</h4>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p class="w3-center">
+                                            <img src="images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                        </p>
+                                    </td>
+                                    <td style="width: 100%">
+
+                                        <p class="w3-center">
+                                            <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
+                                        <p class="w3-center">
+                                            <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
+                                        <p class="w3-center">
+                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                    </td>
+                                    <td class="w3-opacity-min">
+                                        <button type="button" class="w3-button w3-green  w3-margin-bottom" style="width: 100%">
+                                            <i class="fa fa-check"></i> Accept</button>
+                                        <button type="button" class="w3-button w3-red w3-margin-bottom" style="width: 100%">
+                                            <i class="fa fa-remove"></i> Deny</button>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
-                    </div>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
-                </div>
+                    </td>
+                </tr>
+                <tr style="width: 100%">
+                    <td style="width: 50%;">
+                        <div class="w3-container w3-card w3-white w3-round w3-margin">
+                            <table style="width: 100%">
+                                <tr>
+                                    <h4 class="w3-center">Profile #3 wants to connect</h4>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p class="w3-center">
+                                            <img src="images/avatar5.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                        </p>
+                                    </td>
+                                    <td style="width: 100%">
+                                        <p class="w3-center">
+                                            <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
+                                        <p class="w3-center">
+                                            <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
+                                        <p class="w3-center">
+                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                    </td>
+                                    <td class="w3-opacity-min">
+                                        <button type="button" class="w3-button w3-green  w3-margin-bottom" style="width: 100%">
+                                            <i class="fa fa-check"></i> Accept</button>
+                                        <button type="button" class="w3-button w3-red w3-margin-bottom" style="width: 100%">
+                                            <i class="fa fa-remove"></i> Deny</button>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </td>
+                </tr>
+            </table>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
-                    <br>
-                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">16 min</span>
-                    <h4>Jane Doe</h4>
-                    <br>
-                    <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
-                    </p>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
-                </div>
-
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+            <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <br>
+                <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                <h4>Jane Doe has liked the following article:</h4>
+                <br>
+                <hr class="w3-clear">
+                <div class="w3-container w3-white">
                     <br>
                     <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-                    <span class="w3-right w3-opacity">32 min</span>
                     <h4>Angie Jane</h4>
                     <br>
                     <hr class="w3-clear">
-                    <p>Have you seen this?</p>
-                    <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat.
                     </p>
+                    <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
                         <i class="fa fa-thumbs-up"></i> Like</button>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
                         <i class="fa fa-comment"></i> Comment</button>
                 </div>
-                <!-- End Middle Column -->
             </div>
 
+            <!-- End Middle Column -->
         </div>
-        <!-- End Grid -->
+
+    </div>
+    <!-- End Grid -->
     </div>
     <!-- End Page Container -->
     </div>
